Many Updates to News Page

--- a/news.html
+++ b/news.html
@@ -67,6 +67,142 @@
      <div class="col-md-1"></div>
     </div>
   </div>
+	<div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Joo-Hwan and Eun-Chae</h1>
+         <p class="blog-post-meta">December 7, 2018 by Keith</p>
+        <p>Joo-Hwan and Eun-Chae married in 2013. Because Eun-Chae is a US citizen, she was able to apply for a conditional green card for Joo-Hwan. The couple came to Keith at Southam Law to remove conditions on Joo-Hwan's green card. Keith helped the couple gather proof of the truthful nature of their marriage and to file a timely application.</p>
+	<p>The application was filed in March 2017, but during 2017, everything at immigration stalled. Joo-Hwan was initially given a receipt that extended his green card for 12 months. But as the 12-month window approached, Joo-Hwan worried about how he could prove his green card status without a new green card itself. Keith advised Joo-Hwan about procedures to visit a local office for a temporary green card stamp. Joo-Hwan was able to get two temporary stamps and to travel to and from South Korea on the stamps.</p>
+	<p>Finally, after 19 months, immigration approved the application. Joo-Hwan's green card status is unrestricted, and he and Eun-Chae can live permanently in the US and travel freely between the US and South Korea.</p>
+	<p>(Names changed for privacy purposes.)</p>
+	</div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
+	<div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Margarita</h1>
+         <p class="blog-post-meta">December 4, 2018 by Keith</p>
+        <p>Margarita has been coming to the United States regularly for years. Her daughter is now a US citizen, which opened a path for Margarita to obtain permanent residence. She came to Southam Law to prepare for the interview regarding the residency process. Margarita had doubts because immigration officials once gave her problems when she tried to enter the US. Keith helped Margarita to understand what would happen in the interview and helped her to practice a sincere but brief answer to any question about that entry. The goal was to convince the immigration officer of the truth: that the problems of the previous entry would not be a problem in obtaining permanent residency. The strategy worked. Margarita now has a green card and can live permanently in the United States with her daughter and granddaughter!</p>
+	<p>(Names changed for privacy purposes.)</p>
+	</div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
+	<div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Yulia</h1>
+         <p class="blog-post-meta">October 31, 2018 by Keith</p>
+        <p>Yulia is from Eastern Europe, but she's been living in Portugal for several years. Yulia provides IT services for a Chicago-based company that invited her to the US for a business meeting. Yulia and her affiliate company in the US contacted Keith at Southam Law to help Yulia get a B1 visa (a business visitor). Yulia was worried that she would have trouble getting a visa to the US since she is not living in her country of citizenship. Keith helped Yulia and her company understand the rules for B1 visas and how to make a smooth application. Yulia gathered documents that Keith suggested, including proof of her residence in Portugal, proof of her income, and a letter from her affiliate company in the US. Keith also reviewed the online visa application and gave Yulia some tips for the interview. The strategy was a success, and Yulia now has a B1 visa to visit the US!</p>
+	<p>(Names changed for privacy purposes.)</p>
+	</div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
+	<div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Sana and Jamal</h1>
+         <p class="blog-post-meta">October 29, 2018 by Keith</p>
+        <p>Jamal moved to the United States with his family several years ago. In 2016, Jamal and Sana married, and they began the process of helping Sana move to the US to be with Jamal. At that time, Jamal was a US permanent resident, so it meant that Sana had to spend time on a waiting list before she could move permanently to the US. Sana was still a student in her home country during this time, but she had traveled to the US for a temporary visit to see Jamal and to take an examination in connection with her studies. Then circumstances changed. The waiting list surged forward and Sana had the unexpected opportunity to stay permanently in the US.</p>
+	<p>That is when Jamal and Sana turned to Keith at Southam Law. They wanted to file the green card application for Sana but they wanted to avoid any red flags with immigration. Their fear was that it would look like Sana had misled officials by entering on a tourist visa and then filing a green card application quickly after that. Keith helped Sana and Jamal put together an application that included an explanation for the application and evidence that described the unexpected opportunity to stay. The application process was slower than anyone wanted: Sana didn't receive permission to work for nearly 10 months; Jamal became a US citizen while waiting. But finally, after repeated inquiries to immigration officials and after getting a Senator's office involved, the final interview for Sana's case was set. Keith helped Jamal and Sana prepare for the interview, reviewing documents and going through a mock interview.</p>
+	<p>The efforts were worth it. The interview was easy, and Sana's green card was approved right after the interview. Sana now has her green card, and the couple can live permanently together in the United States!</p>
+	<p>(Names changed for privacy purposes.)</p>
+	</div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
+	 <div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Merjem & Adam</h1>
+         <p class="blog-post-meta">August 7, 2018 by Keith</p>
+        <p>Merjem came to the US for graduate study at a major university. At school, she met Adam, a fellow student in her department. The two started spending more and more time together, and realized that they were a couple in love. They started hanging out with each other's friends and family. Adam even traveled to Merjem's home country to meet her family. Adam eventually accepted a job in Chicago, and the two had to live separately for a while. When Merjem finished her coursework and began to focus on her dissertation, she moved to Chicago to be with Adam. They decided to get married and to apply for a green card for Merjem. Their friend recommended Keith at Southam Law for this process.</p>
+	<p>Keith met with Adam and Merjem to review their case. The only real concern was a question of timing. Though they had officially married already, they hadn't yet had a big wedding celebration. In fact, they planned to celebrate twice: once in the US and once in Merjem's home country. Keith helped them time their application so that they could keep their various travel commitments without delaying the immigration process. A small hiccup happened with Merjem's medical exam, but in the end, the efforts paid off. Merjem's green card was approved the same day as their immigration interview. Merjem now has a green card, and she and Adam can focus on their two upcoming wedding celebrations!</p>
+	<p>(Names changed for privacy purposes.)</p>
+		</div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
+	<div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Natalia and Daniel</h1>
+         <p class="blog-post-meta">July 20, 2018 by Keith</p>
+        <p>Natalia and Daniel grew up in Venezuela. Like many people in their country, they watched in horror as Hugo Chavez and then Nicolas Maduro took step after step to turn the country into a dictatorship. Natalia’s family had always been politically active, and she worked to oppose the Chavez/Maduro regime. Natalia protested in opposition demonstrations and volunteered for an opposition party, encouraging others to vote and monitoring polling places. Pro-regime forces noticed and were not pleased. Natalia was met with intimidation at first, but she persisted. She and other volunteers were once forced into a room and held by pro-regime forces who ultimately “only” robbed and threatened the volunteers.</p>
+	<p>Things got worse. Natalia and Daniel received a death threat in their mailbox, specifically addressed to Natalia. Then things got even worse. Natalia was going from an opposition demonstration to her office when she was intercepted by pro-regime thugs. These were the notorious ‘colectivos,’ armed gangs that dispense vigilante “justice” for the Chavez/Maduro regime. At gunpoint, they forced Natalia into their car and drove her away. The colectivos forced Natalia to cover her head and eventually took her to an unknown building. Natalia was interrogated and psychologically tortured for some time by the colectivos: they physically assaulted her, held a gun to her head, grabbed her breast, and threatened to rape and kill her and to kill her husband and family. In the end, the colectivos let Natalia go. Understandably traumatized, Natalia found help from a kind stranger and eventually made it home to her husband, Daniel.</p>
+	<p>Daniel encouraged Natalia to report the abduction, assault, and threats to the police. The two went to Venezuela’s CICPC (like the US’s FBI) to report the crime. The police were not at all interested in helping, but they went through the motions. They asked Natalia to sit in a room to speak with a police officer. That’s when Natalia noticed. She was in the same room where the colectivos had held her. She knew it was the same room because the floor tiles were identical, one was cracked in specific way, and there was a cigarette butt in the crack. She had no doubt, and she froze up. Natalia was able to convince Daniel to go right then.</p>
+	<p>Natalia and Daniel decided to leave Venezuela. They applied to schools in the US, and obtained student visas to come to an English school in Chicago. They approached Keith Southam as his prior law office to file the asylum application. It was a lot of work to put the story together with evidence to back up the story. The wait for an interview and then the wait for a decision were both long. But finally, US immigration officials granted asylum to Natalia and Daniel. They are safe in the United States now, and no longer need fear the Venezuelan regime!</p>
+	<p>(Names changed for privacy purposes.)</p>
+	</div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
+	<div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Valeria</h1>
+         <p class="blog-post-meta">June 14, 2018 by Keith</p>
+        <p>Valeria came to the United States with a tourist visa to improve her English and see the United States. After her arrival, she decided to stay and enroll in English school with the hope of going to graduate school. She contacted Keith Southam at Southam Law to help with a change to student status.</p>
+	<p>Keith advised her that she would have to send two applications: one to extend tourist status and another to change to student status. This was necessary because immigration officials would take several months to approve the change of status. Valeria's tourist status had to be valid during this time. The extension request was approved without problems. But initially, immigration officials did not want to approve the application to change status. They wanted proof that Valeria would return to her home country and that her family had enough money to pay for school.</p>
+	<p>Keith helped Valeria and her family collect and translate invoices and recent documents from her country of origin, as well as bank statements from the US. The strategy was successful. Valeria is now in student status and can focus on her studies.</p>
+	<p>(Names changed for privacy purposes.)</p>
+	</div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
+	<div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Victoria's Green Card</h1>
+         <p class="blog-post-meta">May 15, 2018 by Keith</p>
+        <p>Victoria and her family have worked with Keith Southam in the past for immigration needs. This time, Victoria asked Keith to help after immigration denied her application for a green card. The denial reason was ostensibly due only to a missed fingerprint appointment. However, just a few weeks before the denial, immigration itself told Victoria she needn't go to the fingerprint appointment. Clearly, someone at immigration made a mistake. Keith helped Victoria file a motion to reconsider and also informally contacted the local immigration office. The strategy worked, and the local immigration office agreed to reconsider their decision, ultimately approving the application. Victoria is now - finally - a permanent resident of the United States!</p>
+	<p>(Names changed for privacy purposes.)</p>
+	</div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
+		<div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Gabriel (Part 2)</h1>
+         <p class="blog-post-meta">April 19, 2018 by Keith</p>
+        <p>This isn't Gabriela's first success story with Southam Law. About a year ago, Southam Law helped Gabriela renew her DACA status. This was helpful in anticipation of what came next: a green card. Gabriela entered the US as a young child and grew up in the US. In short, she's a DREAMer. She married a US citizen, but could not become a lawful permanent resident (that is, get a green card) in the US because she didn't have a lawful entry. Under current policy, she had to go to Mexico to get an immigrant visa. But fortunately, her prior DACA authorizations minimized the risks of this trip. After working through all of the applications in the United States, Gabriela and her husband traveled to Juarez, Mexico. She attended her visa interview, and it was quickly approved. She and her husband then returned to the United States, where she is finally a lawful permanent resident, on the path to becoming a US citizen!</p>
+	<p>(Names changed for privacy purposes.)</p>
+	</div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
 	 <div class="container main-content">
     <div class="row">
       <div class="col-md-1"></div>
