--- a/news.html
+++ b/news.html
@@ -132,7 +132,7 @@
       <div class="col-md-1"></div>
       <div class="col-md-10">
         <div class="blog-post">
-         <h1 class="blog-post-title">Success Story: Merjem & Adam</h1>
+         <h1 class="blog-post-title">Success Story: Merjem and Adam</h1>
          <p class="blog-post-meta">August 7, 2018 by Keith</p>
         <p>Merjem came to the US for graduate study at a major university. At school, she met Adam, a fellow student in her department. The two started spending more and more time together, and realized that they were a couple in love. They started hanging out with each other's friends and family. Adam even traveled to Merjem's home country to meet her family. Adam eventually accepted a job in Chicago, and the two had to live separately for a while. When Merjem finished her coursework and began to focus on her dissertation, she moved to Chicago to be with Adam. They decided to get married and to apply for a green card for Merjem. Their friend recommended Keith at Southam Law for this process.</p>
 	<p>Keith met with Adam and Merjem to review their case. The only real concern was a question of timing. Though they had officially married already, they hadn't yet had a big wedding celebration. In fact, they planned to celebrate twice: once in the US and once in Merjem's home country. Keith helped them time their application so that they could keep their various travel commitments without delaying the immigration process. A small hiccup happened with Merjem's medical exam, but in the end, the efforts paid off. Merjem's green card was approved the same day as their immigration interview. Merjem now has a green card, and she and Adam can focus on their two upcoming wedding celebrations!</p>
@@ -194,7 +194,7 @@
       <div class="col-md-1"></div>
       <div class="col-md-10">
         <div class="blog-post">
-         <h1 class="blog-post-title">Success Story: Gabriel (Part 2)</h1>
+         <h1 class="blog-post-title">Success Story: Gabriela (Part 2)</h1>
          <p class="blog-post-meta">April 19, 2018 by Keith</p>
         <p>This isn't Gabriela's first success story with Southam Law. About a year ago, Southam Law helped Gabriela renew her DACA status. This was helpful in anticipation of what came next: a green card. Gabriela entered the US as a young child and grew up in the US. In short, she's a DREAMer. She married a US citizen, but could not become a lawful permanent resident (that is, get a green card) in the US because she didn't have a lawful entry. Under current policy, she had to go to Mexico to get an immigrant visa. But fortunately, her prior DACA authorizations minimized the risks of this trip. After working through all of the applications in the United States, Gabriela and her husband traveled to Juarez, Mexico. She attended her visa interview, and it was quickly approved. She and her husband then returned to the United States, where she is finally a lawful permanent resident, on the path to becoming a US citizen!</p>
 	<p>(Names changed for privacy purposes.)</p>
@@ -253,7 +253,7 @@
       <div class="col-md-1"></div>
       <div class="col-md-10">
         <div class="blog-post">
-         <h1 class="blog-post-title">Success Story: Claudia & Marco</h1>
+         <h1 class="blog-post-title">Success Story: Claudia and Marco</h1>
          <p class="blog-post-meta">January 7, 2018 by Keith</p>
         <p>Claudia and Marco have know each other for some time. Claudia came to the US with her parents as a child, but after several years returned to her home country. Marco meanwhile is a citizen of the United States. Later in life, Claudia and Marco got married. Based on this marriage, Marco applied for an immigrant visa so that Claudia could move back to the United States to join him. Unfortunately, the US consulate denied Claudia's visa, saying she was ineligible to enter the United States due to her prior trips to the United States. That's when Claudia and Marco reached out. Southam Law reviewed the visa application and Claudia's application, concluding that the consulate had made a mistake. Southam Law submitted a request to the consulate, asking them to reconsider the decision and providing evidence in support. The strategy worked. Claudia is now a permanent resident, starting a new life with her husband in the United States!</p>
 	<p>(Names changed for privacy purposes.)</p>
