--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
       <div class="col-md-5">
         <p>Email: <a href="mailto:keith@southamlaw.com">keith@southamlaw.com</a></p>
         <p>Phone: +1 (773) 466-4478</p>
-        <p>Address: 208 South Jefferson Street, Suite 204, Chicago, Illinois 60661</p>
+        <p>Address: 350 N Orleans Street, Suite 9000N, Chicago, Illinois 60654</p>
         <p>(Please note that office hours are by appointment only)</p>
         <p><a href="http://www.facebook.com/southamlaw">Facebook</a> <a href="http://www.twitter.com/southamlaw">Twitter</a></p>
       </div>
